--- a/SpringDemoDB/src/main/resources/application.properties
+++ b/SpringDemoDB/src/main/resources/application.properties
@@ -2,15 +2,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/libDB?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=kebanz1112
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.hbm2ddl.auto=update
 
+spring.datasource.jpa.properties.hibernate.show_sql=true
+spring.datasource.jpa.properties.hibernate.format_sql=true
 # logs
 logging.level.org.hibernate.type=trace
 
